--- a/dictionaries/ck3-glossary.toml
+++ b/dictionaries/ck3-glossary.toml
@@ -30,6 +30,7 @@
 "let's get started!" = "시작해보지!"
 "i look forward to seeing the final result!" = "최종 결과물이 기대되는 군!"
 "historical context:" = "역사적 배경:"
+"fraternal love" = "형제애"
 
 # 플레이스홀더
 "xxxxx" = "xxxxx" # RICE, VIET 에서 사용하는 플레이스 홀더로 API 요청 되지 않도록 사전에 추가
