Add new entry for 'emai' in proper nouns dictionary
Signed-off-by: ☁️dungsil <git+commit@younggeon.kim>

--- a/dictionaries/ck3-proper-nouns.toml
+++ b/dictionaries/ck3-proper-nouns.toml
@@ -660,6 +660,7 @@
 "höfðingifru" = "회프딩기프루"
 "lendirmeý" = "렌디르메위"
 "höfðingsmóðir" = "회프딩스모디르"
+"emai" = "에마이"
 
 # 가문명 접두사 (공백으로 끝남)
 "a " = "아 "
