--- a/.github/workflows/invalidate-on-dictionary-update.yml
+++ b/.github/workflows/invalidate-on-dictionary-update.yml
@@ -19,6 +19,7 @@ jobs:
       contents: write
     env:
       GOOGLE_AI_STUDIO_TOKEN: "${{secrets.GOOGLE_AI_STUDIO_TOKEN}}"
+      LOG_LEVEL: "${{ env.LOG_LEVEL }}"
     steps:
       - name: Clean workspace
         run: |
