--- a/.github/workflows/weekly-docs-update.yml
+++ b/.github/workflows/weekly-docs-update.yml
@@ -12,7 +12,7 @@ jobs:
       issues: write
       contents: read
     env:
-      LOG_LEVEL: "${{ env.LOG_LEVEL }}"
+      LOG_LEVEL: "${{ vars.LOG_LEVEL }}"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
