--- a/.github/workflows/translate-ck3.yml
+++ b/.github/workflows/translate-ck3.yml
@@ -21,7 +21,7 @@ jobs:
       issues: write
     env:
       GOOGLE_AI_STUDIO_TOKEN: "${{secrets.GOOGLE_AI_STUDIO_TOKEN}}"
-      LOG_LEVEL: "${{ env.LOG_LEVEL }}"
+      LOG_LEVEL: "${{ vars.LOG_LEVEL }}"
     steps:
       - uses: actions/checkout@v6
         with:
