ck3: 모드 번역 업데이트 [skip ci]

--- a/dictionaries/ck3-proper-nouns.toml
+++ b/dictionaries/ck3-proper-nouns.toml
@@ -626,6 +626,7 @@
 "wreth" = "레스"
 "wrister" = "브리스터"
 "writser" = "브리처"
+"yáochén" = "요천"
 "yatim" = "야팀"
 "yfame" = "이팜"
 "yfirdrottning" = "위피르드로트닝"
